@@ -186,7 +186,7 @@ public class EntityManagerTest extends BaseEntityManagerFunctionalTestCase {
 	public void testContains() throws Exception {
 		EntityManager em = getOrCreateEntityManager();
 		em.getTransaction().begin();
-		Integer nonManagedObject = new Integer( 4 );
+		Integer nonManagedObject = Integer.valueOf( 4 );
 		try {
 			em.contains( nonManagedObject );
 			fail( "Should have raised an exception" );
@@ -442,6 +442,37 @@ public class EntityManagerTest extends BaseEntityManagerFunctionalTestCase {
 		}
 		catch( IllegalStateException expected) {
 			// success
+		}
+	}
+
+	@Test
+	public void testEntityNotFoundException() throws Exception {
+		EntityManager em = getOrCreateEntityManager();
+		em.getTransaction().begin();
+		Wallet w = new Wallet();
+		w.setBrand("Lacoste");
+		w.setModel("Minimic");
+		w.setSerial("0324");
+		em.persist(w);
+		Wallet wallet = em.find( Wallet.class, w.getSerial() );
+		em.createNativeQuery("delete from Wallet").executeUpdate();
+		try {
+			em.refresh(wallet);
+		} catch (EntityNotFoundException enfe) {
+			// success
+			if (em.getTransaction() != null) {
+				em.getTransaction().rollback();
+			}
+			em.close();
+			return;
+		}
+
+		try {
+			em.getTransaction().commit();
+			fail("Should have raised an EntityNotFoundException");
+		} catch (PersistenceException pe) {
+		} finally {
+			em.close();
 		}
 	}
 
